<resources>


    <string name="app_name">Note Keeper</string>
    <string name="edit_note_activity">Edit Note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list" translatable="false">Note Keeper</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_hint" translatable="false">Note Title</string>
    <string name="edit_note_hint" translatable="false">Edit Note</string>
    <string name="hint_note_title" translatable="false">Note Title</string>
    <string name="hint_note_text" translatable="false">Note Text</string>
    <string name="menu_next" translatable="false">Next</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home">Home</string>

    <string name="note_icon_description" translatable="false">Note Icon</string>
    <string name="title_activity_drawer_menu" translatable="false">DrawerMenu</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_header_background_descrip" translatable="false">Navigation Header Background Image</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_communicate" translatable="false">Communicate</string>
    <string name="nav_share" translatable="false">Share</string>
    <string name="nav_send" translatable="false">Send</string>
    <string name="open_drawer" translatable="false">Opening Drawer</string>
    <string name="close_drawer" translatable="false">Closing Drawer</string>
    <string name="item_course_title" translatable="false">Course Name</string>
    <string name="note_date">Date Created</string>
    <string name="menu_search">Search</string>
    <string name="edit_course_dialog_title">Edit Course</string>
    <string name="dialog_edit_course_id_hint">Course Id</string>
    <string name="dialog_edit_course_name">Course Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Notes</string>
    <string name="search_result_activity_label">Results</string>


</resources>
