<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
<!--        tools:showIn="navigation_view">-->

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notes"
                android:checkable="true"
                android:enabled="true"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_notes" />
        <item
                android:id="@+id/nav_courses"
                android:checkable="true"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_courses" />
    </group>

    <item
            android:checkable="false"
            android:title="@string/nav_communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:checkable="true"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/nav_share" />
            <item
                    android:id="@+id/nav_send"
                    android:checkable="true"
                    android:icon="@drawable/ic_send_black_24dp"
                    android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
